examples/test/testpolicy16344.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16344
  namespace: namespace460
spec:
  podSelector:
    matchLabels:
      key1: value26
      key42: value24
      key18: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value45
          key16: value42
          key22: value36
